--- a/src/scss/base/_banner.scss
+++ b/src/scss/base/_banner.scss
@@ -3,6 +3,7 @@
     background: $main-color url('../img/main-bg.webp') no-repeat center/cover;
     color: #fff;
     min-height: 963px;
+    margin-bottom: 60px;
 }
 
 .banner__title {
