--- a/src/scss/base/_02_mixins.scss
+++ b/src/scss/base/_02_mixins.scss
@@ -59,12 +59,6 @@
 	margin: 0 auto;
 }
 
-@mixin img-shadow($gradient: "linear-gradient(272deg, rgba(0, 0, 0, 0) 1.8%, #000000 98%)") {
-	contnet: '';
-	width: 100%;
-	height: 100%;
-	position: absolute;
-	top: 0;
-	left: 0;
-	background: $gradient;
+@mixin bg-img($url) {
+	background-image: linear-gradient(272deg, rgba(0, 0, 0, 0) 1.8%, rgba(0, 0, 0, 0.5) 98%), url($url);
 }
