--- a/src/scss/base/_04_ui-kit.scss
+++ b/src/scss/base/_04_ui-kit.scss
@@ -1,10 +1,12 @@
 $main-color: #D57800;
+$box-shadow: 0px 5px 50px rgba(0, 0, 0, 0.4);
 
 body {
     font-family: 'Lato';
     font-size: 20px;
     font-weight: 400;
     color: #000;
+    line-height: 1.2;
 }
 
 header, main, footer, .modal {
@@ -105,6 +107,22 @@ img {
         background: #F7F7F7;
         border: none;
         color: #A4A4A4;
+    }
+}
+
+.list {
+    list-style: none;
+    padding-left: 0;
+
+    & li::before {
+        content: '';
+        width: 10px;
+        height: 10px;
+        display: inline-block;
+        vertical-align: baseline;
+        background-color: $main-color;
+        border-radius: 50%;
+        margin: 0 20px;
     }
 }
 
