--- a/src/scss/base/_04_ui-kit.scss
+++ b/src/scss/base/_04_ui-kit.scss
@@ -126,6 +126,25 @@ img {
     }
 }
 
+.list--ch {
+    list-style: none;
+    padding-left: 0;
+
+    & li {
+        margin-bottom: 15px;
+    }
+
+    & li::before {
+        content: '';
+        width: 11px;
+        height: 10px;
+        display: inline-block;
+        vertical-align: baseline;
+        background: url('../img/ch.svg') no-repeat center;
+        margin-right: 12px;
+    }
+}
+
 @media (min-width: 1400px) {
     .container, 
     .container-lg, 
@@ -134,6 +153,12 @@ img {
     .container-xl, 
     .container-xxl {
         max-width: 1570px;
+    }
+}
+
+@media (max-width: 992px) {
+    header, main, footer, .modal {
+        font-size: 18px;
     }
 }
 
