--- a/src/scss/base/_cabinet.scss
+++ b/src/scss/base/_cabinet.scss
@@ -235,6 +235,51 @@
     }
 }
 
+.cabinet__campare {
+    border-collapse: separate;
+    border-spacing: 20px 0;
+    width: 100%;
+
+    & td:first-of-type {
+        background: rgba(235, 235, 235, 0.51);
+        text-transform: uppercase;
+        color: #646464;
+        font-size: 18px;
+        white-space: nowrap;
+        text-align: left;
+        font-weight: 400;
+        padding: 14px 20px;
+    }
+
+    & tr:first-of-type td {
+        border-radius: 20px 20px 0 0;
+        border-bottom: none;
+    }
+
+    & tr:last-of-type td {
+        border-radius: 0 0 20px 20px;
+        border-bottom: none;
+    }
+
+    & img {
+        border-radius: 10px;
+    }
+
+    & td {        
+        padding: 14px 0;
+        text-align: center;
+        font-weight: 300;
+        font-size: 18px;
+        border-bottom: 1px solid rgba(#707070, 0.3);
+        vertical-align: top;
+
+        &.acc {
+            font-weight: 400;
+            color: $main-color;
+        }
+    }
+}
+
 @media (max-width: 1400px) {
     .cabinet__panel {
         width: 250px;
@@ -272,6 +317,19 @@
         margin-top: 0;
         margin-bottom: 10px;
     }
+
+    .cabinet__campare td:first-of-type {
+        font-size: 16px;
+        padding: 14px;
+    }
+
+    .cabinet__campare {
+        border-spacing: 10px 0;
+    }
+
+    .cabinet__campare td {
+        font-size: 15px;
+    }
 }
 
 @media (max-width: 991px) {
@@ -284,7 +342,10 @@
     .cabinet__panel .nav-link, 
     .cabinet__panel .nav-tabs .nav-item.show .nav-link, 
     .cabinet__panel .nav-tabs .nav-link.active {
-        font-size: 17px;
+        font-size: 15px;
+    }
+    .cabinet__panel .nav-tabs svg {
+        margin-right: 3px;
     }
     .cabinet__content {
         width: calc(100% - 200px - 15px);
@@ -298,6 +359,10 @@
         &:nth-of-type(even) {
             margin-right: 0;
         }
+    }
+
+    .cabinet__campare td:first-of-type {
+        display: none;
     }
 }
 
@@ -316,6 +381,11 @@
         flex-direction: column;
         align-items: flex-start;
     }
+    .cabinet__panel .nav-link, 
+    .cabinet__panel .nav-tabs .nav-item.show .nav-link, 
+    .cabinet__panel .nav-tabs .nav-link.active {
+        font-size: 17px;
+    }
     .cabinet__exit {
         padding-top: 55px;
         padding-bottom: 0;
@@ -327,5 +397,14 @@
     }
     .editing .cabinet__edit::after {
         font-size: 16px;
+    }
+    .cabinet__campare td {
+        font-size: 14px;
+    }
+    .cabinet__subtitle {
+        font-size: 17px;
+    }
+    .cabinet__subtitle::before {
+        top: 4px;
     }
 }
