--- a/src/scss/base/_catalog-main.scss
+++ b/src/scss/base/_catalog-main.scss
@@ -58,6 +58,7 @@
         font-size: 22px;
         line-height: 26px;
         margin-bottom: 30px;
+        height: 78px;
     }
 
     & .catalog__more .button {
