--- a/src/scss/base/_filter.scss
+++ b/src/scss/base/_filter.scss
@@ -107,4 +107,199 @@
     margin-right: 1%;
 }
 
+.filter__range {
+    width: 100%;
+    height: 40px;
+    accent-color: $main-color;
+    -webkit-appearance: none;
+}
+  
+  /*progress support*/
+  .filter__range.slider-progress {
+    background-color: $main-color; 
+  }
+  
+  .filter__range:focus {
+    outline: none;
+  }
+  
+  input[type=range].filter__range::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    width: 78px;
+    height: 44px;
+    border-radius: 0;
+    background: transparent url('../img/thumb.svg');
+    border: none;
+    box-shadow: none;
+    margin-top: calc(20px * 0.5 - 44px * 0.5);
+  }
+  
+  input[type=range].filter__range::-webkit-slider-runnable-track {
+    height: 20px;
+    border: none;
+    border-radius: 10px;
+    background: rgba(245, 245, 245, 0.6);
+    box-shadow: none;
+  }
+  
+  input[type=range].filter__range::-webkit-slider-thumb:hover {
+    background: transparent url('../img/thumb.svg');
+  }
+  
+  input[type=range].filter__range:hover::-webkit-slider-runnable-track {
+    background: rgba(245, 245, 245, 0.6);
+  }
+  
+  input[type=range].filter__range::-webkit-slider-thumb:active {
+    background: transparent url('../img/thumb.svg');
+  }
+  
+  input[type=range].filter__range:active::-webkit-slider-runnable-track {
+    background: rgba(245, 245, 245, 0.6);
+  }
+  
+  input[type=range].filter__range.slider-progress::-webkit-slider-runnable-track {
+    background: $main-color;
+  }
+  
+  input[type=range].filter__range.slider-progress:hover::-webkit-slider-runnable-track {
+    background: $main-color;
+  }
+  
+  input[type=range].filter__range.slider-progress:active::-webkit-slider-runnable-track {
+    background: $main-color;
+  }
+  
+  /*mozilla*/
+  input[type=range].filter__range::-moz-range-thumb {
+    width: 78px;
+    height: 44px;
+    border-radius: 0;
+    background: transparent url('../img/thumb.svg');
+    border: none;
+    box-shadow: none;
+  }
+  
+  input[type=range].filter__range::-moz-range-track {
+    height: 20px;
+    border: none;
+    border-radius: 10px;
+    background: rgba(245, 245, 245, 0.6);
+    box-shadow: none;
+  }
+  
+  input[type=range].filter__range::-moz-range-thumb:hover {
+    background: transparent url('../img/thumb.svg');
+  }
+  
+  input[type=range].filter__range:hover::-moz-range-track {
+    background: rgba(245, 245, 245, 0.6);
+  }
+  
+  input[type=range].filter__range::-moz-range-thumb:active {
+    background: transparent url('../img/thumb.svg');
+  }
+  
+  input[type=range].filter__range:active::-moz-range-track {
+    background: rgba(245, 245, 245, 0.6);
+  }
+  
+  input[type=range].filter__range.slider-progress::-moz-range-track {
+    background: $main-color;
+  }
+  
+  input[type=range].filter__range.slider-progress:hover::-moz-range-track {
+    background: $main-color;
+  }
+  
+  input[type=range].filter__range.slider-progress:active::-moz-range-track {
+    background: $main-color;
+  }
+  
+  /*ms*/
+  input[type=range].filter__range::-ms-fill-upper {
+    background: transparent;
+    border-color: transparent;
+  }
+  
+  input[type=range].filter__range::-ms-fill-lower {
+    background: transparent;
+    border-color: transparent;
+  }
+  
+  input[type=range].filter__range::-ms-thumb {
+    width: 78px;
+    height: 44px;
+    border-radius: 0;
+    background: transparent url('../img/thumb.svg');
+    border: none;
+    box-shadow: none;
+    margin-top: 0;
+    box-sizing: border-box;
+  }
+  
+  input[type=range].filter__range::-ms-track {
+    height: 20px;
+    border-radius: 10px;
+    background: rgba(245, 245, 245, 0.6);
+    border: none;
+    box-shadow: none;
+    box-sizing: border-box;
+  }
+  
+  input[type=range].filter__range::-ms-thumb:hover {
+    background: transparent url('../img/thumb.svg');
+  }
+  
+  input[type=range].filter__range:hover::-ms-track {
+    background: rgba(245, 245, 245, 0.6);
+  }
+  
+  input[type=range].filter__range::-ms-thumb:active {
+    background: transparent url('../img/thumb.svg');
+  }
+  
+  input[type=range].filter__range:active::-ms-track {
+    background: rgba(245, 245, 245, 0.6);
+  }
+  
+  input[type=range].filter__range.slider-progress::-ms-fill-lower {
+    height: 20px;
+    border-radius: 10px 0 0 10px;
+    margin: -undefined 0 -undefined -undefined;
+    background: #D57800;
+    border: none;
+    border-right-width: 0;
+  }
+  
+  input[type=range].filter__range.slider-progress:hover::-ms-fill-lower {
+    background: #D57800;
+  }
+  
+  input[type=range].filter__range.slider-progress:active::-ms-fill-lower {
+    background: #D57800;
+  }
+  
 //arrow-range
+
+@media (max-width: 1400px) {
+    .filter--front .filter__form-item:first-child {
+        width: 100%;
+    }
+}
+
+@media (max-width: 992px) {
+    .filter--front .filter__form,
+    .filter--front .filter__form-item:first-child {
+        flex-direction: column;
+    }
+    .filter--front .filter__form-item,
+    .filter__input {
+        width: 100%;
+    }
+    .filter--front .filter__button {
+        width: 170px;
+        margin: 20px auto 0;
+        display: block;
+    }
+}
