--- a/src/components/page-blocks/_header.html
+++ b/src/components/page-blocks/_header.html
@@ -4,7 +4,7 @@
             <a class="navbar-brand" href="/">
                 <img src="img/logo.svg" alt="My space logo" width="205" height="71" class="header__logo">
             </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span></span>
                 <span></span>
                 <span></span>
@@ -55,6 +55,10 @@
             <div class="header__buttons">
                 <button class="no-btn" data-bs-toggle="modal" data-bs-target="#loginModal">Log in</button>
                 <button class="button" data-bs-toggle="modal" data-bs-target="#registrationModal">Registration</button>
+            </div>
+            <div class="header__lang @@w">
+              <button class="no-btn active">EN</button>
+              <button class="no-btn">RU</button>
             </div>
         </div>
         </nav>
