--- a/src/scss/base/_header.scss
+++ b/src/scss/base/_header.scss
@@ -16,7 +16,6 @@
     font-weight: 300;
 
     &:hover,
-    &:focus,
     &:active,
     &.show {
         color: $main-color;
@@ -68,6 +67,36 @@
     }
 }
 
+.header__lang {
+    position: absolute;
+    top: 85vh;
+    left: 0;
+    display: flex;
+    flex-direction: column;
+
+    & .no-btn {
+        font-weight: 700;
+        margin-bottom: 20px;
+
+        &:hover,
+        &:focus,
+        &.active {
+            color: $main-color;
+            text-decoration: underline;
+        }
+    }
+    &.w .no-btn {
+        color: #fff;
+
+        &:hover,
+        &:focus,
+        &.active {
+            color: $main-color;
+            text-decoration: underline;
+        }
+    }
+}
+
 @media (max-width: 1200px) {
     .header .navbar-brand {
         width: 15%;
@@ -87,6 +116,9 @@
 @media (max-width: 991px) {
     .header .navbar-brand {
         width: 150px;
+    }
+    .header .navbar-nav {
+        width: 100%;
     }
     .header .navbar-toggler {
         display: flex;
@@ -121,6 +153,40 @@
             & span:nth-of-type(3) {
                 transform: rotate(-45deg) translate(12px, -10px);
             }
+        }
+    }
+    .header .nav-link {
+        border-bottom: 1px solid rgba(112, 112, 112, 0.07);
+    }
+    .header__buttons {
+        display: flex;
+        flex-direction: column;
+        margin-top: 80px;
+    }
+    .header__buttons .no-btn {
+        font-size: 18px;
+        text-align: left;
+        padding: 8px 0;
+        border-bottom: 1px solid rgba(112, 112, 112, 0.07);
+    }
+    .header__buttons .button {
+        padding: 8px 0;
+        background-color: transparent;
+        color: $main-color;
+        font-size: 18px;
+        text-align: left;
+    }
+    .header__lang {
+        position: static;
+        margin-top: 80px;
+        align-items: flex-start;
+
+        & .no-btn {
+            font-size: 16px;
+            margin-bottom: 14px;
+        }
+        &.w .no-btn {
+            color: #000;
         }
     }
 }
