--- a/src/scss/base/_main-category.scss
+++ b/src/scss/base/_main-category.scss
@@ -118,3 +118,30 @@
         font-size: 32px;
     }
 }
+
+@media (max-width: 768px) {
+    .main-category__items {
+        grid-gap: 0;
+        min-height: auto;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+    }
+    .main-category__item {
+        width: 276px;
+        height: 230px;
+        margin-bottom: 40px;
+        box-shadow: $box-shadow;
+
+        &:first-of-type {
+            height: 383px;
+        }
+    }
+    .main-category__item-title {
+        font-size: 30px;
+    }
+    .main-category__item a {
+        padding: 31px;
+    }
+}
