--- a/src/scss/base/_catalog-main.scss
+++ b/src/scss/base/_catalog-main.scss
@@ -66,3 +66,27 @@
         font-size: 21px;
     }
 }
+
+@media (max-width: 992px) {
+    .catalog-main__items .catalog__visual {
+        height: 220px;
+    }
+    .catalog-main__items .catalog__sity, 
+    .catalog-main__items .catalog__slider .swiper-pagination .swiper-pagination-total {
+        font-size: 15px;
+    }
+    .catalog-main__items .catalog__title {
+        font-size: 21px;
+    }
+    .catalog-main__items .catalog__price {
+        font-size: 17px;
+        margin-bottom: 10px;
+    }
+    .catalog-main__items .catalog__body {
+        font-size: 18px;
+        line-height: 20px;
+        margin-bottom: 20px;
+        height: 62px;
+    }
+    
+}
