--- a/src/scss/base/_02_mixins.scss
+++ b/src/scss/base/_02_mixins.scss
@@ -59,6 +59,8 @@
 	margin: 0 auto;
 }
 
-@mixin bg-img($url) {
+@mixin bg-img($url) {	
+    background-position: center;
+    background-size: cover;
 	background-image: linear-gradient(272deg, rgba(0, 0, 0, 0) 1.8%, rgba(0, 0, 0, 0.5) 98%), url($url);
 }
