--- a/src/scss/base/_catalog.scss
+++ b/src/scss/base/_catalog.scss
@@ -8,7 +8,6 @@
         display: flex;
         justify-content: space-between;
         align-items: flex-start;
-        flex-wrap: wrap;
     }
 
     & .filter__form {
@@ -269,7 +268,7 @@
     .catalog__banner {
         position: relative;
         min-height: calc(100vh - 79px);
-        background-size: 100% 93%;
+        background-size: auto 93%;
         background-repeat: no-repeat;
         background-position: top center;
         padding-bottom: 0;
@@ -295,6 +294,30 @@
     }
     .catalog__banner-text {
         flex: 1;
+    }
+}
+
+@media (max-width: 768px) {
+    .catalog__banner-title {
+        font-size: 40px;
+    }
+    .catalog__banner-text {
+        font-size: 20px;
+    }
+    .catalog__list-title {
+        font-size: 40px;
+        margin-bottom: 35px;
+    }
+    .catalog__item {
+        width: 48%;
+
+        &:nth-of-type(3n)
+        {
+            margin-right: 2%;
+        }
+        &:nth-of-type(even) {
+            margin-right: 0;
+        }
     }
 }
 
