--- a/src/scss/base/_header.scss
+++ b/src/scss/base/_header.scss
@@ -69,7 +69,7 @@
 
 .header__lang {
     position: absolute;
-    top: 85vh;
+    bottom: -120px;
     left: 0;
     display: flex;
     flex-direction: column;
