Add contact page

--- a/src/components/page-blocks/_header.html
+++ b/src/components/page-blocks/_header.html
@@ -19,8 +19,8 @@
                         Properties
                       </a>
                       <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="#">For Rent</a></li>
-                        <li><a class="dropdown-item" href="#">For Sale</a></li>
+                        <li><a class="dropdown-item" href="catalog.html">For Rent</a></li>
+                        <li><a class="dropdown-item" href="catalog.html">For Sale</a></li>
                       </ul>
                     </li>
                   <li class="nav-item">
@@ -31,10 +31,10 @@
                         Services
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <li><a class="dropdown-item" href="#">Legal Services</a></li>
-                      <li><a class="dropdown-item" href="#">Estate Management</a></li>
-                      <li><a class="dropdown-item" href="#">Investment Solutions</a></li>
-                      <li><a class="dropdown-item" href="#">Concierge Services</a></li>
+                      <li><a class="dropdown-item" href="ur-services.html">Legal Services</a></li>
+                      <li><a class="dropdown-item" href="invest-services.html">Estate Management</a></li>
+                      <li><a class="dropdown-item" href="sol-services.html">Investment Solutions</a></li>
+                      <li><a class="dropdown-item" href="con-services.html">Concierge Services</a></li>
                     </ul>
                   </li>
                   <li class="nav-item dropdown">
@@ -49,7 +49,7 @@
                     </ul>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Contact</a>
+                    <a class="nav-link" href="contacts.html">Contact</a>
                   </li>
             </ul>
             <div class="header__buttons">
