Add inform pages

--- a/src/scss/base/_news.scss
+++ b/src/scss/base/_news.scss
@@ -107,6 +107,9 @@
             margin-right: 0;
         }
     }
+    .news__text {
+        height: 67px;
+    }
 }
 
 @media (max-width: 768px) {
