Add last page. Fix mob ver

--- a/src/components/page-blocks/_header.html
+++ b/src/components/page-blocks/_header.html
@@ -10,9 +10,12 @@
                 <span></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <a class="navbar-brand close" href="/">
+                    <img src="img/logo.svg" alt="My space logo" width="205" height="71" class="header__logo">
+                </a>
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                      <a class="nav-link" href="#">About</a>
+                      <a class="nav-link" href="about.html">About</a>
                     </li>
                     <li class="nav-item dropdown">
                       <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -27,7 +30,7 @@
                     <a class="nav-link" href="imigration.html">Immigration</a>
                   </li>
                   <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <a class="nav-link dropdown-toggle" href="services.html" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                         Services
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -56,7 +59,7 @@
                 <button class="no-btn" data-bs-toggle="modal" data-bs-target="#loginModal">Log in</button>
                 <button class="button" data-bs-toggle="modal" data-bs-target="#registrationModal">Registration</button>
             </div>
-            <div class="header__lang @@w">
+            <div class="header__lang">
               <button class="no-btn active">EN</button>
               <button class="no-btn">RU</button>
             </div>
