--- a/src/scss/base/_filter.scss
+++ b/src/scss/base/_filter.scss
@@ -309,8 +309,12 @@
   list-style: none;
   padding-left: 0;
 
-  & li:not(:first-of-type) {
+  & li:not(:first-of-type),
+  & .close {
     display: none;
+  }
+  & li[style]:not(.close) {
+    display: block;
   }
 }
   
