--- a/src/scss/base/_catalog.scss
+++ b/src/scss/base/_catalog.scss
@@ -94,9 +94,33 @@
     margin-bottom: 36px;
 }
 
-.swiper {
+.catalog__slider {
     width: 100%;
     height: 100%;
+
+    & .swiper-button-next,
+    & .swiper-button-prev {
+        position: absolute;
+        top: 50%;
+        left: 0;
+        z-index: 1;
+        width: 35px;
+        height: 35px;
+        background: url('../img/arrow-left.svg') no-repeatcenter/contain;
+        transform: translateY(-50%);
+        opacity: 0.5;
+        transition: 0.4s;
+
+        &:hover,
+        &:active {
+            opacity: 1;
+        }
+    }
+    & .swiper-button-next {
+        transform: translateY(-50%) rotate(180deg);
+        left: auto;
+        right: 0;
+    }
 }
 
 .catalog__slider .swiper-pagination {
@@ -144,6 +168,11 @@
     background: #F5F5F5;
     border-radius: 7px;
     padding: 3px 11px;
+
+    &.sales {
+        background: #E42222;
+        color: #F7F7F7;
+    }
 }
 
 .catalog__sity {
