--- a/src/scss/base/_imigration.scss
+++ b/src/scss/base/_imigration.scss
@@ -186,10 +186,10 @@
         z-index: 1;
         width: 98px;
         height: 50px;
-        border-radius: 0 22px 22px 0;
+        border-radius: 22px 0 0 22px;
         background: rgba(245, 245, 245, 0.48) url('../img/ep_arrow-left.svg') no-repeat center/contain;
     }
-    & .swiper-button-n {
+    & .swiper-button-p {
         transform: rotate(180deg);
         right: 105px;
     }
