--- a/src/scss/base/_imigration.scss
+++ b/src/scss/base/_imigration.scss
@@ -186,7 +186,7 @@
         z-index: 1;
         width: 98px;
         height: 50px;
-        border-radius: 22px 0 0 22px;
+        border-radius: 0 22px 22px 0;
         background: rgba(245, 245, 245, 0.48) url('../img/ep_arrow-left.svg') no-repeat center/contain;
     }
     & .swiper-button-p {
