--- a/src/components/page-blocks/_header.html
+++ b/src/components/page-blocks/_header.html
@@ -30,7 +30,7 @@
                     <a class="nav-link" href="imigration.html">Immigration</a>
                   </li>
                   <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="services.html" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <a class="nav-link dropdown-toggle" href="services.html" id="navbarDropdown" data-bs-toggle="dropdown" aria-expanded="false">
                         Services
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
