--- a/src/scss/base/_catalog.scss
+++ b/src/scss/base/_catalog.scss
@@ -3,6 +3,7 @@
     @include bg-img('../img/catalog-bg.webp');
     padding: 30px 0;
     margin-bottom: 64px;
+    min-height: 1150px;
 
     & .container {
         display: flex;
@@ -297,13 +298,13 @@
     .catalog__banner {
         position: relative;
         min-height: calc(100vh - 79px);
-        background-size: auto 93%;
         background-repeat: no-repeat;
         background-position: top center;
         padding-bottom: 0;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
+        margin-bottom: 0;
     }
     .catalog__filter .filter__form {
         width: 100%;
